yaml-examples/codeserver/codeserver-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: codeserver
  labels:
    app: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
      - name: codeserver
        image: linuxserver/code-server
        imagePullPolicy: Always
        ports:
          - containerPort: 8443
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: codeserver
