yaml-examples/codeserver/vscode-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vscode
  labels:
    app: vscode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode
  template:
    metadata:
      labels:
        app: vscode
    spec:
      containers:
      - name: vscode
        image: linuxserver/code-server
        imagePullPolicy: Always
        ports:
          - containerPort: 8443
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: vscode
