yaml-examples/codeserver/codeserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: default
spec:
  selector:
    app: codeserver
  ports:
  - name: web
    port: 8443
    targetPort: 8443
