yaml-examples/codeserver/vscode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode
  namespace: default
spec:
  selector:
    app: vscode
  ports:
  - name: web
    port: 8443
    targetPort: 8443
