yaml-examples/codeserver/codeserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
spec:
  rules:
  - host: codeserver.lan
    http:
      paths:
      - backend:
          service:
            name: codeserver
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
